Tweaks to website.
* Add code snippet to front page.
* Add mention of github repo on Examples page.
* Tweak various styling.
* Move to firepad.firebaseio.com Firebase with only one room.

--- a/examples/index.html
+++ b/examples/index.html
@@ -46,8 +46,16 @@
       </ul>
     </div>
     <div class="span9">
+      <section id="intro">
+        <div class="uses-title example-title">All Examples</div>
+        <p>Examples are checked into the github repository.  You can take a look with:</p>
+        <pre>&gt; git clone git://github.com/firebase/firepad.git
+&gt; open firepad/examples/all-examples.html</pre>
+        <p>Or you can view them below and click "View Source on Github" to jump to the source.</p>
+      </section>
+
       <section id="richtext">
-        <div class="uses-title example-title">1. Rich Text
+        <div class="example-title">1. Rich Text
           <a href="https://github.com/firebase/firepad/blob/master/examples/richtext.html" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
         </div>
         <p>Use Firepad's rich text features for collaborative blogging, note taking, proofreading and much more!</p>
@@ -55,7 +63,7 @@
       </section>
 
       <section id="code">
-        <div class="uses-title example-title">2. Code Editing
+        <div class="example-title">2. Code Editing
           <a href="https://github.com/firebase/firepad/blob/master/examples/code.html" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
         </div>
         <p>Combined with CodeMirror's extensive code editing features, Firepad is great for pair programming!</p>
@@ -63,7 +71,7 @@
       </section>
 
       <section id="userlist">
-        <div class="uses-title example-title">3. User List
+        <div class="example-title">3. User List
           <a href="https://github.com/firebase/firepad/blob/master/examples/userlist.html" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
         </div>
         <p>You can easily add user presence information and other features.</p>
