Add link to docs in example code.

--- a/examples/code.html
+++ b/examples/code.html
@@ -1,6 +1,6 @@
 <!doctype html>
+<!-- See http://www.firepad.io/docs/ for detailed embedding docs. -->
 <html>
-
 <head>
   <meta charset="utf-8" />
   <!-- Include Firebase -->
