Add ability to import text with formatting.
* Firepad.Formatting creates an empty formatting object, with chainable methods to specify formatting.
* Firepad.Text wraps a string with a Formatting object.
* firepad.setText() can now be provided an array of Text objects.

--- a/examples/richtext.html
+++ b/examples/richtext.html
@@ -49,7 +49,12 @@
     //// Initialize contents.
     firepad.on('ready', function() {
       if (firepad.isHistoryEmpty()) {
-        firepad.setText('Rich-Text editing with Firepad!');
+        var f = Firepad.Formatting().fontSize(24);
+        firepad.setText([
+          Firepad.Text("Rich-text", f.italic(true).color('green')),
+          Firepad.Text(" editing with ", f),
+          Firepad.Text("Firepad!", f.color('red'))
+        ]);
       }
     });
   </script>
