Action.io -> Nitrous.io

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
               </div>
             </div>
             <div class="clearfix">
-              <div class="use-icon"><img src="images/user_action.png"></div>
+              <div class="use-icon"><img src="images/user_nitrous.png"></div>
               <div class="use-text">
-                <a href="http://action.io/" class="use-link" target="_blank">Action.io</a>
+                <a href="http://nitrous.io/" class="use-link" target="_blank">Nitrous.IO</a>
                 A development platform with a collaborative web IDE.
-                <a href="http://action.io/" target="_blank">Try it »</a>
+                <a href="http://nitrous.io/" target="_blank">Try it »</a>
               </div>
             </div>
           </div>
