Fixes #8: Implement html import.

--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,7 @@
   <script src="lib/client.spec.js"></script>
   <script src="lib/annotation-list.spec.js"></script>
   <script src="lib/codemirror-adapter.spec.js"></script>
+  <script src="lib/parse-html.spec.js"></script>
 
   <script type="text/javascript">
     (function() {
