--- a/examples/richtext.html
+++ b/examples/richtext.html
@@ -46,43 +46,40 @@
     var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror,
         { richTextToolbar: true, richTextShortcuts: true });
 
+    var listType = Firepad.LineFormatting.LIST_TYPE,
+        ORDERED = listType.ORDERED, UNORDERED = listType.UNORDERED;
     //// Initialize contents.
     firepad.on('ready', function() {
       if (firepad.isHistoryEmpty()) {
         var f = Firepad.Formatting().fontSize(18);
         var lf = Firepad.LineFormatting();
-        firepad.setText([
-          Firepad.Line([
-            Firepad.Text("Rich-text editing with ", f.fontSize(24)),
-            Firepad.Text("Firepad!", f.fontSize(24).color('red'))
-          ]),
-          Firepad.Line(),
-          Firepad.Line("Supports:"),
-          Firepad.Line([
-            "Different ",
-            Firepad.Text("fonts, ", f.font("impact")),
-            Firepad.Text("sizes, ", f.fontSize(24)),
-            Firepad.Text("and colors.", f.color('blue')),
-          ], lf.unorderedListItem(true)),
-          Firepad.Line([
-            Firepad.Text("Bold, ", f.bold(true)),
-            Firepad.Text("Italic, ", f.italic(true)),
-            Firepad.Text("and underline", f.underline(true)),
-            "."
-          ], lf.unorderedListItem(true)),
-          Firepad.Line([
-            "Lists."
-          ], lf.unorderedListItem(true)),
-          Firepad.Line([
-            "One."
-          ], lf.orderedListItem(true).indent(2)),
-          Firepad.Line([
-            "Two."
-          ], lf.orderedListItem(true).indent(2)),
-          Firepad.Line("Undo / redo", lf.unorderedListItem(true)),
-          Firepad.Line("Cursor / selection synchronization.", lf.unorderedListItem(true)),
-          Firepad.Line("And it's all fully collaborative!", lf.unorderedListItem(true))
-        ]);
+        firepad.setHtml(
+            '<span style="font-size: 24px;">Rich-text editing with <span style="color: red">Firepad!</span></span><br/>\n' +
+            '<br/>' +
+            '<div style="font-size: 18px">' +
+            'Supports:<br/>' +
+            '<ul>' +
+              '<li>Different ' +
+                '<span style="font-family: impact">fonts,</span>' +
+                '<span style="font-size: 24px;"> sizes, </span>' +
+                '<span style="color: blue">and colors.</span>' +
+              '</li>' +
+              '<li>' +
+                '<b>Bold, </b>' +
+                '<i>italic, </i>' +
+                '<u>and underline.</u>' +
+              '</li>' +
+              '<li>Lists' +
+                '<ol>' +
+                  '<li>One</li>' +
+                  '<li>Two</li>' +
+                '</ol>' +
+              '</li>' +
+              '<li>Undo / redo</li>' +
+              '<li>Cursor / selection synchronization.</li>' +
+              '<li>And it\'s all fully collaborative!</li>' +
+            '</ul>' +
+            '</div>');
       }
     });
   </script>
