Re-enabled the twitter follow button.

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           <li>
             <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=firebase&repo=firepad&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
           </li>
-<!--          <li class="follow-btn">
+          <li class="follow-btn">
             <a href="https://twitter.com/firepad" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @Firepad</a>
-          </li>  -->
+          </li> 
           <li class="tweet-btn">
             <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.firepad.io" data-count="horizontal" data-via="Firepad" data-related="Firebase:Data Layer Behind Firepad">Tweet</a>
           </li>
