Changed titles to push code-editing as a strength.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/html">
 
 <head>
-  <title>Firepad, an open source collaborative text editor</title>
-  <meta name="description" content="An open source collaborative text editor. Share documents and see changes occur in real-time." />
+  <title>Firepad - An open source collaborative code and text editor</title>
+  <meta name="description" content="An open source collaborative code and text editor. Share documents and see changes occur in real-time." />
   <meta charset="utf-8" />
   <link rel="stylesheet" href="examples/codemirror/lib/codemirror.css" />
   <link rel="stylesheet" href="examples/firepad.css" />
@@ -30,7 +30,7 @@
         <div id="home-title-container" class="clearfix">
             <img src="images/firepad_logo.png" alt="Firepad Logo" />
         </div>
-        <div id="home-subtitle">Open source collaborative text editing</div>
+        <div id="home-subtitle">Open source collaborative code and text editing</div>
         <a href="https://github.com/firebase/firepad" target="_blank" id="home-download-on-github"><img src="images/download.png"></a>
         <div id="firepad-container">
           <div id="firepad-userlist"></div>
