Added ACE adapter multiple cursors.

--- a/examples/ace.html
+++ b/examples/ace.html
@@ -24,7 +24,7 @@
     body { margin: 0; height: 100%; position: relative; }
     /* Height / width / positioning can be customized for your use case.
        For demo purposes, we make firepad fill the entire browser. */
-    #firepad-container {  /* should be .firepad once it loads */
+    #firepad-container {
       position: absolute; left: 0; top: 0; bottom: 0; right: 0;
     }
   </style>
