Change Mailing List link to Google Group on gh-pages

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="#" class="selected">Home</a>
           <a href="examples/">Examples</a>
           <a href="docs/">Documentation</a>
-          <a href="https://groups.google.com/forum/#!forum/firepad-io" target="_blank">Mailing List</a>
+          <a href="https://groups.google.com/forum/#!forum/firepad-io" target="_blank">Google Group</a>
           <a href="http://demo.firepad.io/" target="_blank" class="private-firepad"></a>
         </div>
         <div id="home-title-container" class="clearfix">
