--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="faq-col">
             <div class="faq-question">
             <div class="faq-title">Which technologies does Firepad use?</div>
-              <span>Firepad uses the <a href="http://codemirror.net" target="_blank">CodeMirror</a> editor to render documents, and its operational transform
+              <span>Firepad can use either the <a href="http://codemirror.net" target="_blank">CodeMirror</a> editor or the <a href="http://ace.c9.io/#nav=about" target="_blank"> Ace</a> editor to render documents, and its operational transform
               code borrows from <a href="https://github.com/Operational-Transformation/ot.js/" target="_blank">ot.js</a>. Behind the scenes, Firepad uses <a href="https://www.firebase.com/?utm_source=landing&utm_medium=email&utm_campaign=firepad" target="_blank">Firebase</a>
               for cloud data storage and synchronization.</span>
             </div>
