--- a/examples/index.html
+++ b/examples/index.html
@@ -112,8 +112,8 @@
   <script src="https://cdn.firebase.com/v0/firebase.js"></script>
   <script src="codemirror/lib/codemirror.js"></script>
   <script src="codemirror/mode/javascript/javascript.js"></script>
-  <script src="codemirror/lib/codemirror.js"></script>
-  <script src="codemirror/mode/javascript/javascript.js"></script>
+  <script src="ace/ace.js"></script>
+  <script src="ace/mode-javascript.js"></script>
   <script src="firepad.js"></script>
   <script src="firepad-userlist.js"></script>
   <script src="../js/examples.js"></script>
