Homepage image addition msging

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
               <div class="use-text">
                 <a href="./examples/#richtext" class="use-link">Rich Text Editing</a>
                 Enable synchronous rich-text document editing.
+                Images can be added to documents too!
               </div>
             </div>
             <div class="clearfix">
