Added CoderPad, LiveMinutes as users.

--- a/index.html
+++ b/index.html
@@ -128,6 +128,30 @@
                 <a href="http://nitrous.io/" target="_blank">Try it »</a>
               </div>
             </div>
+            <div class="clearfix">
+              <div class="use-icon"><img src="images/user_liveminutes.png"></div>
+              <div class="use-text">
+                <a href="http://liveminutes.com/" class="use-link" target="_blank">LiveMinutes</a>
+                A full-featured collaboration service with live collaboration features.
+                <a href="http://liveminutes.com/" target="_blank">Try it »</a>
+              </div>
+            </div>
+            <!--<div class="clearfix">
+              <div class="use-icon"><img src="images/user_koding.png"></div>
+              <div class="use-text">
+                <a href="https://koding.com/" class="use-link" target="_blank">Koding</a>
+                Something.
+                <a href="https://koding.com/" target="_blank">Try it »</a>
+              </div>
+            </div>-->
+            <div class="clearfix">
+              <div class="use-icon"><img src="images/user_coderpad.png"></div>
+              <div class="use-text">
+                <a href="https://coderpad.io/" class="use-link" target="_blank">CoderPad.io</a>
+                A real-time, collaborative, and fully in-browser REPL.
+                <a href="http://coderpad.io/" target="_blank">Try it »</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
