--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
                 <a href="http://liveminutes.com/" target="_blank">Try it »</a>
               </div>
             </div>
-            <!--<div class="clearfix">
+            <<div class="clearfix">
               <div class="use-icon"><img src="images/user_koding.png"></div>
               <div class="use-text">
                 <a href="https://koding.com/" class="use-link" target="_blank">Koding</a>
-                Something.
+                A social development platform with real-time collaborative features.
                 <a href="https://koding.com/" target="_blank">Try it »</a>
               </div>
-            </div>-->
+            </div>
             <div class="clearfix">
               <div class="use-icon"><img src="images/user_coderpad.png"></div>
               <div class="use-text">
