--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <a href="http://liveminutes.com/" target="_blank">Try it »</a>
               </div>
             </div>
-            <<div class="clearfix">
+            <div class="clearfix">
               <div class="use-icon"><img src="images/user_koding.png"></div>
               <div class="use-text">
                 <a href="https://koding.com/" class="use-link" target="_blank">Koding</a>
