Add ShiftEdit to customers

--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@
                 <a href="http://coderpad.io/" target="_blank">Try it »</a>
               </div>
             </div>
+            <div class="clearfix">
+              <div class="use-icon"><img src="images/user_shiftedit.png"></div>
+              <div class="use-text">
+                <a href="https://shiftedit.net/" class="use-link" target="_blank">ShiftEdit</a>
+                ShiftEdit is an online IDE for developing websites from the comfort of your browser.
+                <a href="https://shiftedit.net/" target="_blank">Try it »</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
