Added FAQ question.

--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
                 </ul>
               </span>
             </div>
+            <div class="faq-question">
+              <div class="faq-title">Can I get involved?</div>
+              <span>Yes! We welcome help from the community. Join our <a href='https://groups.google.com/forum/#!forum/firepad-io'>Google Group</a> or send us a <a href='https://github.com/firebase/firepad'>pull request</a>.
+              </span>
+            </div>
           </div>
         </div>
       </div>
