Fixes #34 out-of-order edits are now synced correctly (and some tests added).

--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 
   <script type="text/javascript" src="codemirror/codemirror.js"></script>
   <link rel="stylesheet" type="text/css" href="codemirror/codemirror.css">
-
+  <script src="https://cdn.firebase.com/v0/firebase.js"></script>
   <script src="firepad-debug.js"></script>
 
   <script src="lib/helpers.js"></script>
@@ -19,8 +19,8 @@
   <script src="lib/undomanager.spec.js"></script>
   <script src="lib/client.spec.js"></script>
   <script src="lib/annotation-list.spec.js"></script>
-  <script src="lib/codemirror-adapter.spec.js"></script>
   <script src="lib/parse-html.spec.js"></script>
+  <script src="lib/integration.spec.js"></script>
 
   <script type="text/javascript">
     (function() {
