--- a/examples/index.html
+++ b/examples/index.html
@@ -114,7 +114,7 @@
   <script src="codemirror/mode/javascript/javascript.js"></script>
   <script src="ace/ace.js"></script>
   <script src="ace/mode-javascript.js"></script>
-  <script src="firepad.js"></script>
+  <script src="http://localhost:8002/examples/firepad.js"></script>
   <script src="firepad-userlist.js"></script>
   <script src="../js/examples.js"></script>
   <script src="../js/prettify.js"></script>
