--- a/examples/code.html
+++ b/examples/code.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Include Firebase -->
-  <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+  <script src="https://cdn.firebase.com/js/client/1.0.11/firebase.js"></script>
 
   <!-- Include CodeMirror and its JavaScript mode file -->
   <script src="codemirror/lib/codemirror.js"></script>
