--- a/examples/ace.html
+++ b/examples/ace.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Include Firebase -->
-  <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+  <script src="https://cdn.firebase.com/js/client/1.0.11/firebase.js"></script>
 
   <!-- Include ACE and its JavaScript mode and theme files -->
   <script src="ace/ace.js"></script>
