--- a/examples/hammer.html
+++ b/examples/hammer.html
@@ -6,7 +6,7 @@
   <title>Collaborative editing with CodeMirror</title>
   <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
   <script src="codemirror/lib/codemirror.js"></script>
-  <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+  <script src="https://cdn.firebase.com/js/client/1.0.11/firebase.js"></script>
   <script src="firepad.js"></script>
   <style>
     .CodeMirror pre {
@@ -30,7 +30,7 @@
   <script>
     //Firebase.enableLogging(true);
     var firepadRef = new Firebase('https://firepad.firebaseio-demo.com/hammer');
-    
+
     var editorWrapper = document.getElementById('editor-wrapper');
     var cm = window.cm = CodeMirror(editorWrapper, {
       lineNumbers: true,
