--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </li>
           <li class="follow-btn">
             <a href="https://twitter.com/firepad" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @Firepad</a>
-          </li> 
+          </li>
           <li class="tweet-btn">
             <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.firepad.io" data-count="horizontal" data-via="Firepad" data-related="Firebase:Data Layer Behind Firepad">Tweet</a>
           </li>
@@ -265,7 +265,7 @@
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));</script>
   <script src="js/jquery-1.9.1.min.js"></script>
-  <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+  <script src="https://cdn.firebase.com/js/client/1.0.11/firebase.js"></script>
   <script src="examples/codemirror/lib/codemirror.js"></script>
   <script src="examples/firepad.js"></script>
   <script src="examples/firepad-userlist.js"></script>
