--- a/examples/index.html
+++ b/examples/index.html
@@ -1,1 +1,4 @@
-all-examples.html
+<a href="code.html">Code (CodeMirror editor)</a><br />
+<a href="ace.html">Code (ACE editor)</a><br />
+<a href="richtext.html">Rich Text</a><br />
+<a href="userlist.html">User List</a><br />
