--- a/examples/userlist.html
+++ b/examples/userlist.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
 
   <!-- Include Firepad -->
-  <script src="firepad.js"></script>
-  <link rel="stylesheet" href="firepad.css" />
+  <script src="../dist/firepad.js"></script>
+  <link rel="stylesheet" href="../dist/firepad.css" />
 
   <!-- Include example userlist. -->
   <script src="firepad-userlist.js"></script>
