--- a/examples/code.html
+++ b/examples/code.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
 
   <!-- Include Firepad -->
-  <script src="../dist/firepad.js"></script>
-  <link rel="stylesheet" href="../dist/firepad.css" />
+  <script src="firepad.js"></script>
+  <link rel="stylesheet" href="firepad.css" />
 
   <!-- Helper for generating URLs / Firebase references for example purposes.
        Not necessary in production apps. -->
