--- a/examples/hammer.html
+++ b/examples/hammer.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
   <script src="codemirror/lib/codemirror.js"></script>
   <script src="https://cdn.firebase.com/js/client/1.0.11/firebase.js"></script>
-  <script src="../dist/firepad.js"></script>
+  <script src="firepad.js"></script>
   <style>
     .CodeMirror pre {
       font-family: Helvetica, sans-serif;
