Remove entityHandle.update(), in favor of making .replace() more flexible.
.replace() will now automatically call an entity's update() method if it exists, else it'll fall back to just removing / recreating the entity as we did before.

--- a/examples/richtext.html
+++ b/examples/richtext.html
@@ -80,6 +80,7 @@
       }
     });
 
+    // An example of a complex custom entity.
     firepad.registerEntity('checkbox', {
       render: function (info, entityHandler) {
         var inputElement = document.createElement('input');
@@ -88,8 +89,8 @@
           inputElement.checked = 'checked';
         }
         inputElement.addEventListener('click', function () {
-          entityHandler.update({checked:this.checked});
-        })
+          entityHandler.replace({checked:this.checked});
+        });
         return inputElement;
       }.bind(this),
       fromElement: function (element) {
