--- a/examples/code.html
+++ b/examples/code.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Include Firebase -->
-  <script src="https://cdn.firebase.com/js/client/1.0.11/firebase.js"></script>
+  <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
 
   <!-- Include CodeMirror and its JavaScript mode file -->
   <script src="codemirror/lib/codemirror.js"></script>
@@ -24,8 +24,9 @@
     body { margin: 0; height: 100%; position: relative; }
     /* Height / width / positioning can be customized for your use case.
        For demo purposes, we make firepad fill the entire browser. */
-    .firepad {
-      position: absolute; left: 0; top: 0; bottom: 0; right: 0; height: auto;
+    #firepad-container {
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
