--- a/examples/userlist.html
+++ b/examples/userlist.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Include Firebase -->
-  <script src="https://cdn.firebase.com/js/client/1.0.11/firebase.js"></script>
+  <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
 
   <!-- Include CodeMirror -->
   <script src="codemirror/lib/codemirror.js"></script>
@@ -28,11 +28,11 @@
     body { margin: 0; height: 100%; }
     /* Height / width / positioning can be customized for your use case.
        For demo purposes, we make the user list 175px and firepad fill the rest of the page. */
-    .firepad-userlist {
+    #userlist {
       position: absolute; left: 0; top: 0; bottom: 0; height: auto;
       width: 175px;
     }
-    .firepad {
+    #firepad {
       position: absolute; left: 175px; top: 0; bottom: 0; right: 0; height: auto;
     }
   </style>
