--- a/examples/richtext.html
+++ b/examples/richtext.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Include Firebase -->
-  <script src="https://cdn.firebase.com/js/client/1.0.11/firebase.js"></script>
+  <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
 
   <!-- Include CodeMirror -->
   <script src="codemirror/lib/codemirror.js"></script>
@@ -24,14 +24,15 @@
     body { margin: 0; height: 100%; position: relative; }
       /* Height / width / positioning can be customized for your use case.
          For demo purposes, we make firepad fill the entire browser. */
-    .firepad {
-      position: absolute; left: 0; top: 0; bottom: 0; right: 0; height: auto;
+    #firepad-container {
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 
 <body>
-  <div id="firepad"></div>
+  <div id="firepad-container"></div>
 
   <script>
     //// Initialize Firebase.
@@ -40,7 +41,7 @@
     // var firepadRef = new Firebase('<YOUR FIREBASE URL>');
 
     //// Create CodeMirror (with lineWrapping on).
-    var codeMirror = CodeMirror(document.getElementById('firepad'), { lineWrapping: true });
+    var codeMirror = CodeMirror(document.getElementById('firepad-container'), { lineWrapping: true });
 
     //// Create Firepad (with rich text toolbar and shortcuts enabled).
     var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror,
