--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <div id="home-subtitle">Open source collaborative code and text editing</div>
         <a href="https://github.com/firebase/firepad" target="_blank" id="home-download-on-github"><img src="images/download.png"></a>
         <div id="firepad-container">
-          <div id="firepad-userlist"></div>
+          <div id="firepad-userlist" class="firepad-userlist"></div>
           <div id="firepad"></div>
         </div>
 
         <div id="code-container">
           <div id="code-heading">
             Add Firepad to your app! Use <a href="https://github.com/firebase/firepad/blob/master/examples/richtext.html">this code</a>:
-          
+
           <pre><span class="kd">var</span> <span class="nx">firepadDiv</span> <span class="o">=</span> <span class="nb">document</span><span class="p">.</span><span class="nx">getElementById</span><span class="p">(</span><span class="s1">&#39;firepad&#39;</span><span class="p">);</span>
 <span class="kd">var</span> <span class="nx">firepadRef</span> <span class="o">=</span> <span class="k">new</span> <span class="nx">Firebase</span><span class="p">(</span><span class="s1">&#39;&lt;firebase url...&gt;&#39;</span><span class="p">);</span>
 <span class="kd">var</span> <span class="nx">codeMirror</span> <span class="o">=</span> <span class="nx">CodeMirror</span><span class="p">(</span><span class="nx">firepadDiv</span><span class="p">,</span> <span class="p">{</span> <span class="nx">lineWrapping</span><span class="o">:</span> <span class="kc">true</span> <span class="p">});</span>
