Remove firepad logo alt text since it's showing up in google search results description.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="http://demo.firepad.io/" target="_blank" class="private-firepad"></a>
         </div>
         <div id="home-title-container" class="clearfix">
-            <img src="images/firepad_logo.png" alt="Firepad Logo" />
+            <img src="images/firepad_logo.png" />
         </div>
         <div id="home-subtitle">Open source collaborative code and text editing</div>
         <a href="https://github.com/firebase/firepad" target="_blank" id="home-download-on-github"><img src="images/download.png"></a>
