--- a/test/index.html
+++ b/test/index.html
@@ -1,45 +1,53 @@
 <!doctype html>
 <html>
-<head>
-  <title>Firepad Tests</title>
+  <head>
+    <title>Firepad Tests</title>
 
-  <link rel="stylesheet" type="text/css" href="jasmine-1.3.1/jasmine.css">
-  <script type="text/javascript" src="jasmine-1.3.1/jasmine.js"></script>
-  <script type="text/javascript" src="jasmine-1.3.1/jasmine-html.js"></script>
+    <!-- Jasmine -->
+    <script src="../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
+    <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
+    <link rel="stylesheet" href="../bower_components/jasmine/lib/jasmine-core/jasmine.css">
 
-  <script type="text/javascript" src="codemirror/codemirror.js"></script>
-  <link rel="stylesheet" type="text/css" href="codemirror/codemirror.css">
-  <script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.17/firebase.js'></script>
-  <script src="firepad-debug.js"></script>
+    <!-- CodeMirror -->
+    <script src="../bower_components/codemirror/lib/codemirror.js"></script>
 
-  <script src="lib/helpers.js"></script>
-  <script src="lib/text-operation.spec.js"></script>
-  <script src="lib/cursor.spec.js"></script>
-  <script src="lib/wrapped-operation.spec.js"></script>
-  <script src="lib/undomanager.spec.js"></script>
-  <script src="lib/client.spec.js"></script>
-  <script src="lib/annotation-list.spec.js"></script>
-  <script src="lib/parse-html.spec.js"></script>
-  <script src="lib/integration.spec.js"></script>
+    <!-- Firebase -->
+    <script src="../bower_components/firebase/firebase.js"></script>
 
-  <script type="text/javascript">
-    (function() {
-      var jasmineEnv = jasmine.getEnv();
-      jasmineEnv.updateInterval = 1000;
+    <!-- Firepad -->
+    <script src="firepad-debug.js"></script>
 
-      var htmlReporter = new jasmine.HtmlReporter();
-      jasmineEnv.addReporter(htmlReporter);
+    <!-- Jasmine specs -->
+    <script src="specs/helpers.js"></script>
+    <script src="specs/text-operation.spec.js"></script>
+    <script src="specs/cursor.spec.js"></script>
+    <script src="specs/wrapped-operation.spec.js"></script>
+    <script src="specs/undomanager.spec.js"></script>
+    <script src="specs/client.spec.js"></script>
+    <script src="specs/annotation-list.spec.js"></script>
+    <script src="specs/parse-html.spec.js"></script>
+    <script src="specs/integration.spec.js"></script>
 
-      jasmineEnv.specFilter = function(spec) {
-        return htmlReporter.specFilter(spec);
-      };
+    <!-- Jasmine environment variables -->
+    <script type="text/javascript">
+      (function() {
+        var jasmineEnv = jasmine.getEnv();
+        jasmineEnv.updateInterval = 1000;
 
-      window.onload = function() {
-        jasmineEnv.execute();
-      };
-    })();
-  </script>
-</head>
-<body>
-</body>
+        var htmlReporter = new jasmine.HtmlReporter();
+        jasmineEnv.addReporter(htmlReporter);
+
+        jasmineEnv.specFilter = function(spec) {
+          return htmlReporter.specFilter(spec);
+        };
+
+        window.onload = function() {
+          jasmineEnv.execute();
+        };
+      })();
+    </script>
+  </head>
+
+  <body>
+  </body>
 </html>
