Fix all-examples.html link.

--- a/examples/index.html
+++ b/examples/index.html
@@ -51,7 +51,7 @@
         <div class="uses-title example-title">All Examples</div>
         <p>Examples are checked into the github repository.  You can take a look with:</p>
         <pre>&gt; git clone git://github.com/firebase/firepad.git
-&gt; open firepad/examples/all-examples.html</pre>
+&gt; open firepad/examples/index.html</pre>
         <p>Or you can view them below and click "View Source on Github" to jump to the source.</p>
       </section>
 
