Make examples more standalone (copy/pastable).
* Pull firepad from CDN.
* Remove example-helper.js script include.
* Clean up comments slightly.

--- a/examples/hammer.html
+++ b/examples/hammer.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.3.0/codemirror.css" />
 
   <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
-  <script src="firepad.js"></script>
+  <script src="https://cdn.firebase.com/libs/firepad/0.1.4/firepad-min.js"></script>
+
   <style>
     .CodeMirror pre {
       font-family: Helvetica, sans-serif;
