--- a/examples/code.html
+++ b/examples/code.html
@@ -3,21 +3,17 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <!-- Include Firebase -->
+  <!-- Firebase -->
   <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
 
-  <!-- Include CodeMirror and its JavaScript mode file -->
+  <!-- CodeMirror and its JavaScript mode file -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.3.0/codemirror.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.3.0/mode/javascript/javascript.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.3.0/codemirror.css" />
 
-  <!-- Include Firepad -->
-  <script src="firepad.js"></script>
-  <link rel="stylesheet" href="firepad.css" />
-
-  <!-- Helper for generating URLs / Firebase references for example purposes.
-       Not necessary in production apps. -->
-  <script src="example-helper.js"></script>
+  <!-- Firepad -->
+  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/0.1.4/firepad.css" />
+  <script src="https://cdn.firebase.com/libs/firepad/0.1.4/firepad-min.js"></script>
 
   <style>
     html { height: 100%; }
@@ -35,26 +31,45 @@
   <div id="firepad-container"></div>
 
   <script>
-    //// Initialize Firebase.
-    var firepadRef = getExampleRef();
-    // TODO: Replace above line with:
-    // var ref = new Firebase('<YOUR FIREBASE URL>');
+    function init() {
+      //// Initialize Firebase.
+      var firepadRef = getExampleRef();
+      // TODO: Replace above line with:
+      // var ref = new Firebase('<YOUR FIREBASE URL>');
 
-    //// Create CodeMirror (with line numbers and the JavaScript mode).
-    var codeMirror = CodeMirror(document.getElementById('firepad-container'), {
-      lineNumbers: true,
-      mode: 'javascript'
-    });
+      //// Create CodeMirror (with line numbers and the JavaScript mode).
+      var codeMirror = CodeMirror(document.getElementById('firepad-container'), {
+        lineNumbers: true,
+        mode: 'javascript'
+      });
 
-    //// Create Firepad.
-    var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror);
+      //// Create Firepad.
+      var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror);
 
-    //// Initialize contents.
-    firepad.on('ready', function() {
-      if (firepad.isHistoryEmpty()) {
-        firepad.setText('// JavaScript Editing with Firepad!\nfunction go() {\n  var message = "Hello, world.";\n  console.log(message);\n}');
+      //// Initialize contents.
+      firepad.on('ready', function() {
+        if (firepad.isHistoryEmpty()) {
+          firepad.setText('// JavaScript Editing with Firepad!\nfunction go() {\n  var message = "Hello, world.";\n  console.log(message);\n}');
+        }
+      });
+    }
+
+    // Helper to get hash from end of URL or generate a random one.
+    function getExampleRef() {
+      var ref = new Firebase('https://firepad.firebaseio-demo.com');
+      var hash = window.location.hash.replace(/#/g, '');
+      if (hash) {
+        ref = ref.child(hash);
+      } else {
+        ref = ref.push(); // generate unique location.
+        window.location = window.location + '#' + ref.name(); // add it as a hash to the URL.
       }
-    });
+      if (typeof console !== 'undefined')
+        console.log('Firebase data: ', ref.toString());
+      return ref;
+    }
+
+    init();
   </script>
 </body>
 </html>
