Update examples to use latest firepad version (and latest CodeMirror).

--- a/examples/ace.html
+++ b/examples/ace.html
@@ -12,8 +12,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/theme-textmate.js"></script>
 
   <!-- Firepad -->
-  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/0.1.4/firepad.css" />
-  <script src="https://cdn.firebase.com/libs/firepad/0.1.4/firepad-min.js"></script>
+  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.0.0/firepad.css" />
+  <script src="https://cdn.firebase.com/libs/firepad/1.0.0/firepad.min.js"></script>
 
   <style>
     html { height: 100%; }
