--- a/examples/hammer.html
+++ b/examples/hammer.html
@@ -6,11 +6,11 @@
   <title>Collaborative editing with CodeMirror</title>
   
   <!-- Include CodeMirror -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.3.0/codemirror.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.3.0/codemirror.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.5.0/codemirror.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.5.0/codemirror.css" />
 
   <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
-  <script src="https://cdn.firebase.com/libs/firepad/0.1.4/firepad-min.js"></script>
+  <script src="https://cdn.firebase.com/libs/firepad/1.0.0/firepad.min.js"></script>
 
   <style>
     .CodeMirror pre {
