--- a/examples/userlist.html
+++ b/examples/userlist.html
@@ -8,12 +8,12 @@
   <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
 
   <!-- CodeMirror -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.3.0/codemirror.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.3.0/codemirror.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.5.0/codemirror.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.5.0/codemirror.css" />
 
   <!-- Firepad -->
-  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/0.1.4/firepad.css" />
-  <script src="https://cdn.firebase.com/libs/firepad/0.1.4/firepad-min.js"></script>
+  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.0.0/firepad.css" />
+  <script src="https://cdn.firebase.com/libs/firepad/1.0.0/firepad.min.js"></script>
 
   <!-- Include example userlist script / CSS.  
        Can be downloaded from: https://github.com/firebase/firepad/tree/master/examples/ -->
