--- a/examples/ace.html
+++ b/examples/ace.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Firebase -->
-  <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
+  <script src="https://cdn.firebase.com/js/client/2.0.2/firebase.js"></script>
 
   <!-- ACE and its JavaScript mode and theme files -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
@@ -12,8 +12,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/theme-textmate.js"></script>
 
   <!-- Firepad -->
-  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.0.0/firepad.css" />
-  <script src="https://cdn.firebase.com/libs/firepad/1.0.0/firepad.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.1.0/firepad.css" />
+  <script src="https://cdn.firebase.com/libs/firepad/1.1.0/firepad.min.js"></script>
 
   <style>
     html { height: 100%; }
@@ -59,7 +59,7 @@
         ref = ref.child(hash);
       } else {
         ref = ref.push(); // generate unique location.
-        window.location = window.location + '#' + ref.name(); // add it as a hash to the URL.
+        window.location = window.location + '#' + ref.key(); // add it as a hash to the URL.
       }
       if (typeof console !== 'undefined')
         console.log('Firebase data: ', ref.toString());
