Fix firepadRef comment in a couple examples.

--- a/examples/ace.html
+++ b/examples/ace.html
@@ -35,7 +35,7 @@
       //// Initialize Firebase.
       var firepadRef = getExampleRef();
       // TODO: Replace above line with:
-      // var ref = new Firebase('<YOUR FIREBASE URL>');
+      // var firepadRef = new Firebase('<YOUR FIREBASE URL>');
 
       //// Create ACE
       var editor = ace.edit("firepad-container");
