--- a/examples/code.html
+++ b/examples/code.html
@@ -35,7 +35,7 @@
       //// Initialize Firebase.
       var firepadRef = getExampleRef();
       // TODO: Replace above line with:
-      // var ref = new Firebase('<YOUR FIREBASE URL>');
+      // var firepadRef = new Firebase('<YOUR FIREBASE URL>');
 
       //// Create CodeMirror (with line numbers and the JavaScript mode).
       var codeMirror = CodeMirror(document.getElementById('firepad-container'), {
